--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,5 +24,10 @@ jobs:
               env:
                 ORG_NAME: 123 limited
               run: echo '${{ env.ORG_NAME }}'
+    vars-job:
+        runs-on: ubuntu-latest
+        steps:
+            - name: print vars
+              run: echo 'group = ${{ vars.GROUP_NAME }}  user = ${{ vars.USERNAME }} token = ${{ secrets.TOKEN  }}'
           
           
