--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,5 +29,6 @@ jobs:
         steps:
             - name: print vars
               run: echo 'group = ${{ vars.GROUP_NAME }}  user = ${{ vars.USERNAME }} token = ${{ secrets.TOKEN  }}'
+            - run: printenv
           
           
