--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -15,7 +15,7 @@ jobs:
               name: step 1
               run: echo "tip=hello" >> $GITHUB_OUTPUT
             - name: step 2
-              run: "output from step1 is ${{ steps.step1.outputs.tip }}"
+              run: echo "output from step1 is ${{ steps.step1.outputs.tip }}"
     job2:
         needs: job1
         runs-on: ubuntu-latest
